--- a/index.html
+++ b/index.html
@@ -35,15 +35,9 @@ https://templatemo.com/tm-512-moonlight
     
   
         <nav>
-          <div class="logo">
-              <img src="img/logo.png" alt="">
-          </div>
-          <div class="mini-logo">
-              <img src="img/mini_logo.png" alt="">
-          </div>
           <ul>
             <li><a href="#1"><i class="fa fa-home"></i> <em>Accueil</em></a></li>
-            <li><a href="#2"><i class="fa fa-user"></i> <em>A propos de nous</em></a></li>
+            <li><a href="#2"><i class="fa fa-user"></i> <em>A propos</em></a></li>
             <li><a href="#3"><i class="fa fa-pencil"></i> <em>Exp&eacute;rience</em></a></li>
             <li><a href="#5"><i class="fa fa-envelope"></i> <em>Contact</em></a></li>
           </ul>
@@ -54,14 +48,14 @@ https://templatemo.com/tm-512-moonlight
             <div class="content first-content">
               <div class="container-fluid">
                   <div class="col-md-3">
-                      <div class="author-image"><img src="img/author_image.png" alt="Author Image"></div>
+                      <div class="author-image"><img src="img/0.jpg" alt="Author Image"></div>
                   </div>
                   <div class="col-md-9">
                       <h2>Giordano Coach</h2>
                       <h3>Restauration et cave &agrave; vin</h3>
                       <p>J&#039;aide les professionnels de la <em>restauration</em> &agrave; concr&eacute;tiser leur projet ainsi que les amateurs de vin &agrave; organiser leur <em>cave &agrave; vin</em> personnelle.</p>
                       <div class="main-btn"><a href="#2">En savoir plus</a></div>
-                      <div class="fb-btn"><a rel="nofollow" href="https://instagram.com/giordano_coach?igshid=YmMyMTA2M2Y=" target="_blank">Suivez-nous sur Instagram</a></div>
+                      <div class="fb-btn"><a rel="nofollow" href="https://instagram.com/giordano_coach?igshid=YmMyMTA2M2Y=" target="_blank">Suivez-moi sur Instagram</a></div>
                   </div>
               </div>
             </div>
@@ -71,17 +65,17 @@ https://templatemo.com/tm-512-moonlight
                 <div class="container-fluid">
                     <div class="col-md-6">
                         <div class="left-content">
-                            <h2>A propos de nous</h2>
-                            <p>Nous vous proposons de vous guider dans votre projet d&#039;ouverture ou de restructuration de restaurant, ou pour choisir et conserver les meilleures bouteilles pour votre cave personnelle</p> 
-                            <p>Depuis 1992, nous avons travaillé sur la C&ocirc;te d&#039;Azur, &agrave New York et à Palm Beach dans des &eacute;tablissements de qualit&eacute;</p>
-                            <p>Nous avons travaillé sous la direction de chefs prestigieux tels Jean-Fran&ccedil;ois Issautier, Jean-Jacques Rachou et Jacques Chibois</p>
-                            <p>Nous avons aussi participé au lancement de jeunes pousses dans le domaine de la restauration et assuré des postes de direction dans des restaurants disposant de plus d&#039;une centaine de couverts</p>
-                          <div class="main-btn"><a href="#3">Notre exp&eacute;rience</a></div>
+                            <h2>A propos</h2>
+                            <p>Je vous propose de vous guider dans votre projet d&#039;ouverture ou de restructuration de restaurant, ou pour choisir et conserver les meilleures bouteilles pour votre cave personnelle</p> 
+                            <p>Depuis 1992, j&#039;ai travaillé sur la C&ocirc;te d&#039;Azur, &agrave New York et à Palm Beach dans des &eacute;tablissements de qualit&eacute;</p>
+                            <p>J&#039;ai travaillé sous la direction de chefs prestigieux tels Jean-Fran&ccedil;ois Issautier, Jean-Jacques Rachou et Jacques Chibois</p>
+                            <p>J&#039;ai aussi participé au lancement de jeunes pousses dans le domaine de la restauration et assuré des postes de direction dans des restaurants disposant de plus d&#039;une centaine de couverts</p>
+                          <div class="main-btn"><a href="#3">Mon exp&eacute;rience</a></div>
                       </div>
                     </div>
                     <div class="col-md-6">
                         <div class="right-image">
-                          <img src="img/about_image.jpg" alt="">
+                          <img src="img/about_image.png" alt="">
                       </div>
                     </div>
                 </div>
@@ -115,9 +109,9 @@ https://templatemo.com/tm-512-moonlight
                                         <div class="col-md-6">
                                             <div class="right-content">
                                                 <h4>Cuisine et service &agrave; l&#039;h&ocirc;tel Gray d&#039;Albion **** &agrave; Cannes (1992)</h4>
-                                                <h5>Cuisiner au Royal Gray ** Guide Michelin </h5>
+                                                <p>Cuisiner au Royal Gray ** Guide Michelin </p>
                                                 <p>Stage dans un h&ocirc;tel 4 &eacute;toiles de la Croisette, sous la direction du chef Jacques Chibois, dans un &eacute;tablissement 2 &eacute;toiles au Guide Michelin</p>
-                                                <h4>Cuisinier &agrave; l&#039;Auberge de la vieille route ** Michelin &agrave; St Blaise (1994)</h4>
+                                                <h4>Cuisinier et chef de rang &agrave; l&#039;Auberge de la vieille route ** Michelin &agrave; St Blaise (1994)</h4>
                                                 <p>Sous la direction du chef Jean-Fran&ccedil;ois Issautier, dans un restaurant 2 &eacute;toiles au Guide Michelin</p>
                                                 <h4>Serveur du gouverneur de la r&eacute;gion PACA au Fort Gautaume en 1994</h4>
                                                 <p>Service militaire</p>
@@ -126,8 +120,8 @@ https://templatemo.com/tm-512-moonlight
                                                 <br/>
                                                 <h2>Formation</h2>
                                                 <h4>Institut Paul Bocuse &agrave; Ecully (1990 - 1993)</h4>
-                                                <p>Dipl&ocirc;me en Arts Culinaires</p>
-                                                <div class="main-btn"><a href="#5">Contactez-nous</a></div>
+                                                <p>Licence en Restauration, H&ocirc;tellerie et Management</p>
+                                                <div class="main-btn"><a href="#5">Contactez-moi</a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -157,7 +151,7 @@ https://templatemo.com/tm-512-moonlight
                             <h2>Email</h2>
                             <h4><a href="mailto:giordanocoaching@gmail.com">giordanocoaching[At]gmail.com</a></h4>
                             <h2>R&eacute;servez un rdv gratuit pour discuter de votre projet</h2>
-                            <h4><a href="https://calendly.com/cmieguerre/30min" target=_blank>Choisissez votre créneau ici</a></h4>
+                            <h4><a href="https://calendly.com/giordanocoaching/30min" target=_blank>Choisissez votre créneau ici</a></h4>
                         </div>
                     </div>
                 </div>
