--- a/index.html
+++ b/index.html
@@ -92,16 +92,18 @@ https://templatemo.com/tm-512-moonlight
                                         <div class="col-md-6">
                                             <div class="left-content">
                                                 <h2>Exp&eacute;rience</h2>
+                                                <h4>Directeur de MAG &quot;Music Art Gastronomy&quot; (2018 - 2021)</h4>
+                                                <p>Organisateur d&#039;&eacute;v&eacute;nements (concert et exposition de peinture)</p>
                                                 <h4>Directeur de Riviera Tour (2013 - 2018)</h4>
                                                 <p>Plateforme de réservation de voyages sur mesure sur la C&ocirc;te d&#039;Azur</p>
-                                                <h4>Plan d&#039;ouverture du restaurant VINO VINO &agrave; Antibes (2011)</h4>
+                                                <h4>Plan d&#039;ouverture du restaurant Vino Vino &agrave; Antibes (2011)</h4>
                                                 <p>Plan de financement avec la Soci&eacute;t&eacute; G&eacute;n&eacute;rale et &eacute;tude marketing</p>
                                                 <h4>Assistant puis Manager de la Brasserie de la M&eacute;diterran&eacute;e &agrave; Mougins (2000 - 2011)</h4>
-                                                <p>Restaurant 1 couvert sur le Guide Michelin</p>
-                                                <h4>Chef de partie au Janeiro &agrave; Palm Beach FL, USA (1999)</h4>
-                                                <p>Service de qualit&eacute; aupr&egrave;s de 120 clients quotidiens</p>
-                                                <h4>Manager du bar de la Brasserie de la M&eacute;diterran&eacute;e &agrave; Mougins (1998)</h4>
-                                                <p>Qualit&eacute; de service aupr&egrave;s de 160 clients quotidiens du restaurants et 20 clients quotidiens du bar</p>
+                                                <p>Restaurant cit&eacute; par le Guide Michelin</p>
+                                                <h4>Chef de partie - chef de rang - barman au Janeiro &agrave; Palm Beach FL, USA (1999)</h4>
+                                                <p>120 places assises</p>
+                                                <h4>Manager du bar de la Brasserie de la M&eacute;diterran&eacute;e &agrave; Mougins (1997 - 1999)</h4>
+                                                <p>Qualit&eacute; de service aupr&egrave;s de 160 clients quotidiens du restaurant</p>
                                                 <h4>Chef De Partie au Bistrot de Mougins (1996 - 1997)</h4>
                                                 <p>Cuisine traditionnelle dans un restaurant recens&eacute; par le guide Michelin</p>
                                             </div>
@@ -110,13 +112,13 @@ https://templatemo.com/tm-512-moonlight
                                             <div class="right-content">
                                                 <h4>Cuisine et service &agrave; l&#039;h&ocirc;tel Gray d&#039;Albion **** &agrave; Cannes (1992)</h4>
                                                 <p>Cuisiner au Royal Gray ** Guide Michelin </p>
-                                                <p>Stage dans un h&ocirc;tel 4 &eacute;toiles de la Croisette, sous la direction du chef Jacques Chibois, dans un &eacute;tablissement 2 &eacute;toiles au Guide Michelin</p>
+                                                <p>Stage dans un h&ocirc;tel 4 &eacute;toiles de la Croisette, sous la direction du chef Jacques Chibois</p>
                                                 <h4>Cuisinier et chef de rang &agrave; l&#039;Auberge de la vieille route ** Michelin &agrave; St Blaise (1994)</h4>
                                                 <p>Sous la direction du chef Jean-Fran&ccedil;ois Issautier, dans un restaurant 2 &eacute;toiles au Guide Michelin</p>
-                                                <h4>Serveur du gouverneur de la r&eacute;gion PACA au Fort Gautaume en 1994</h4>
+                                                <h4>Serveur du gouverneur de la r&eacute;gion PACA au Fort Gantaume en 1994</h4>
                                                 <p>Service militaire</p>
                                                 <h4>Cuisinier &agrave; la C&ocirc;te Basque &agrave; New York (1994)</h4>
-                                                <p>Sous la direction du chef Jean-Jacques Rachou, dans une institution ic&ocirc;nique de Manhattan</p>
+                                                <p>Sous la direction du chef Jean-Jacques Rachou, dans une institution ic&ocirc;nique de Manhattan **** New York Times</p>
                                                 <br/>
                                                 <h2>Formation</h2>
                                                 <h4>Institut Paul Bocuse &agrave; Ecully (1990 - 1993)</h4>
